cloud-native/aks-kubeflow/overlay/patches/oauth2-proxy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  template:
    spec:
      containers:
        - name: oauth2-proxy
