cloud-native/aks-kubeflow/overlay/patches/istio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/azure-dns-label-name: kubeflow-static-validation
spec:
  type: LoadBalancer
